--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
-user=root
-password=arqi
-dburl=jdbc:mysql://localhost:3306/coursejdbc?useTimezone=true&serverTimezone=GMT%2B8
+user=developer
+password=123456
+dburl=jdbc:mysql://localhost:3306/purecrud?useTimezone=true&serverTimezone=GMT%2B8
 useSSL=false
